Implémentation du choix de l'action d'un joueur via l'entrée console avec timeout